--- a/public/pages/cadastroAdm.html
+++ b/public/pages/cadastroAdm.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="containerHeader">
-        <a href="/"
+        <a href="index"
           ><img src="../img/aquelesquemsabem.png" alt="logo do negocio"
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
@@ -184,7 +184,7 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="/"><li>Inicio</li></a>
+            <a href="index"><li>Inicio</li></a>
             <a href="cadastro"><li>Registrar-se</li></a>
             <a href="login"><li>Logar-se</li></a>
             <a href="sobreNos"><li>Sobre Nós</li></a>
