--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -9,19 +9,21 @@
   <body>
     <header>
       <div class="containerHeader">
-        <a href="/"
+        <a href="index"
           ><img src="../img/aquelesquemsabem.png" alt="logo do negocio"
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
         <div class="lado">
           <a href="login" class="button">ENTRAR</a>
-          <a href="cadastro"class="button">CADASTRAR</a>
+          <a href="cadastro" class="button">CADASTRAR</a>
           <div class="dropdown">
             <img src="../img/menu.png" class="menu" />
             <div class="dropdown-content">
               <a href="login">Login</a>
               <a href="cadastro">Registrar-se</a>
-              <a href="perfil" class="perfil"><img src="../img/fotodeperfil.jpg" alt="">NickName</a>
+              <a href="perfil" class="perfil"
+                ><img src="../img/fotodeperfil.jpg" alt="" />NickName</a
+              >
             </div>
           </div>
         </div>
@@ -47,7 +49,11 @@
             <br />
             <p>SenaiSurc, O app de trasporte público para todos!!!</p>
           </div>
-          <img src="../img/transferir (3).png" alt="imagem do transporte" class="onibus" />
+          <img
+            src="../img/transferir (3).png"
+            alt="imagem do transporte"
+            class="onibus"
+          />
         </div>
         <br />
         <br />
@@ -101,7 +107,10 @@
         <br />
         <br />
         <div class="objetivo">
-          <img src="../img/transferir (1).png" alt="imagem do mantenha contato" />
+          <img
+            src="../img/transferir (1).png"
+            alt="imagem do mantenha contato"
+          />
           <div class="principal">
             <h1>Mantenha Contato</h1>
             <br />
@@ -172,11 +181,13 @@
         <br />
         <br />
         <br />
-        <div class="objetivo">
-          <h1>Fale conosco</h1>
-          <br />
-          <p>(12) 3456-7890</p>
-          <p>Rua Qualquer, 123, Cidade Qualquer ola@grandesite.com.br</p>
+        <div class="objetivo-row">
+            <h1>Fale conosco</h1>
+            <br />
+            <div class="principal">
+            <p>(12) 3456-7890</p>
+            <p>Rua Qualquer, 123, Cidade Qualquer ola@grandesite.com.br</p>
+          </div>
         </div>
         <br />
         <br />
@@ -197,7 +208,9 @@
         <div class="logos">
           <a href="#">
             <img src="../img/facebook-app-symbol.png" alt="icon facebook" /></a
-          ><a href="#"> <img src="../img/instagram.png" alt="icon instagram" /></a>
+          ><a href="#">
+            <img src="../img/instagram.png" alt="icon instagram"
+          /></a>
           <a href="#"><img src="../img/twitter.png" alt="icon twitter" /></a>
         </div>
       </div>
@@ -205,7 +218,7 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="/"><li>Inicio</li></a>
+            <a href="index"><li>Inicio</li></a>
             <a href="sobreNos"><li>Sobre Nós</li></a>
           </ul>
         </div>
