--- a/public/pages/cadastro.html
+++ b/public/pages/cadastro.html
@@ -25,18 +25,23 @@
   <body>
     <header>
       <div class="containerHeader">
-        <a href="/"
+        <a href="index"
           ><img src="../img/aquelesquemsabem.png" alt="logo do negocio"
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
         <div class="lado">
-          <a href="login">ENTRAR</a>
-          <a href="cadastro">CADASTRAR</a>
-          <img src="../img/menu.png" class="menu" />
-          <ul class="lista">
-            <li><a href="login">ENTRAR</a></li>
-            <li><a href="cadastro">CADASTRAR</a></li>
-          </ul>
+          <a href="login" class="button">ENTRAR</a>
+          <a href="cadastro" class="button">CADASTRAR</a>
+          <div class="dropdown">
+            <img src="../img/menu.png" class="menu" />
+            <div class="dropdown-content">
+              <a href="login">Login</a>
+              <a href="cadastro">Registrar-se</a>
+              <a href="perfil" class="perfil"
+                ><img src="../img/fotodeperfil.jpg" alt="" />NickName</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -51,7 +56,7 @@
       <br />
       <br />
       <br />
-      <form action="/Cadusuarios" method="POST" class="bloco">
+      <form action="/api/usuarios/register" method="POST" class="bloco">
         <div class="blocoregistro">
           <br />
           <h1>Cadastrar-se</h1>
@@ -186,7 +191,7 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="/"><li>Inicio</li></a>
+            <a href="index"><li>Inicio</li></a>
             <a href="cadastro"><li>Registrar-se</li></a>
             <a href="login"><li>Logar-se</li></a>
             <a href="sobreNos"><li>Sobre Nós</li></a>
