--- a/public/pages/linhaOnibus.html
+++ b/public/pages/linhaOnibus.html
@@ -9,18 +9,18 @@
   <body>
     <header>
       <div class="containerHeader">
-        <a href="/"
+        <a href="index"
           ><img src="../img/aquelesquemsabem.png" alt="logo do negocio"
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
         <div class="lado">
-          <a href="login.html" class="button">ENTRAR</a>
-          <a href="cadastro.html" class="button">CADASTRAR</a>
+          <a href="login" class="button">ENTRAR</a>
+          <a href="cadastro" class="button">CADASTRAR</a>
           <div class="dropdown">
             <img src="../img/menu.png" class="menu" />
             <div class="dropdown-content">
-              <a href="login.html">Login</a>
-              <a href="cadastro.html">Registrar-se</a>
+              <a href="login">Login</a>
+              <a href="cadastro">Registrar-se</a>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
     </header>
     <main>
       <div class="marca">
-        <a href="sobreNos.html">
+        <a href="sobreNos">
           <img src="../img/aquelesquemsabem.png" alt="marca d'agua" />
         </a>
         <p>SenaiSurc</p>
@@ -38,7 +38,7 @@
       <br />
       <br />
       <br />
-      <div class="linha-content">
+      <div class="linha-container">
         <h1>Nova linha</h1>
         <form action="/Cadlinhas" method="POST">
           <div class="form-group">
@@ -100,8 +100,8 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="/"><li>Inicio</li></a>
-            <a href="sobreNos.html"><li>Sobre Nós</li></a>
+            <a href="index"><li>Inicio</li></a>
+            <a href="sobreNos"><li>Sobre Nós</li></a>
           </ul>
         </div>
       </div>
