--- a/public/pages/sobreNos.html
+++ b/public/pages/sobreNos.html
@@ -9,25 +9,30 @@
   <body>
     <header>
       <div class="containerHeader">
-        <a href="/"
+        <a href="index"
           ><img src="../img/aquelesquemsabem.png" alt="logo do negocio"
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
         <div class="lado">
-          <a href="login">ENTRAR</a>
-          <a href="cadastro">CADASTRAR</a>
-          <img src="../img/menu.png" class="menu" />
-          <ul class="lista">
-            <li><a href="login">ENTRAR</a></li>
-            <li><a href="cadastro">CADASTRAR</a></li>
-          </ul>
+          <a href="login" class="button">ENTRAR</a>
+          <a href="cadastro" class="button">CADASTRAR</a>
+          <div class="dropdown">
+            <img src="../img/menu.png" class="menu" />
+            <div class="dropdown-content">
+              <a href="login">Login</a>
+              <a href="cadastro">Registrar-se</a>
+              <a href="perfil" class="perfil"
+                ><img src="../img/fotodeperfil.jpg" alt="" />NickName</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </header>
     <main>
       <div class="marca">
         <a href="">
-          <img src="img/aquelesquemsabem.png" alt="marca d'agua" />
+          <img src="../img/aquelesquemsabem.png" alt="marca d'agua" />
         </a>
         <p>SenaiSurc</p>
       </div>
@@ -91,7 +96,7 @@
           culpa qui officia deserunt mollit anim id est laborum."
         </p>
       </div>
-      <br>
+      <br />
     </main>
     <footer>
       <div class="contatos-container">
@@ -108,7 +113,9 @@
         <div class="logos">
           <a href="#">
             <img src="../img/facebook-app-symbol.png" alt="icon facebook" /></a
-          ><a href="#"> <img src="../img/instagram.png" alt="icon instagram" /></a>
+          ><a href="#">
+            <img src="../img/instagram.png" alt="icon instagram"
+          /></a>
           <a href="#"><img src="../img/twitter.png" alt="icon twitter" /></a>
         </div>
       </div>
@@ -116,7 +123,7 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="/"><li>Inicio</li></a>
+            <a href="index"><li>Inicio</li></a>
             <a href="cadastro"><li>Registrar-se</li></a>
             <a href="login"><li>Logar-se</li></a>
             <a href="sobreNos"><li>Sobre Nós</li></a>
