--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -59,18 +59,8 @@
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
       </div>
       <div class="bgbottom">
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
         <br />
         <br />
         <br />
@@ -80,8 +70,8 @@
             <h1>Objetivo principal</h1>
             <br />
             <p>
-              Estamos Buscando realizar um site que ajuda nossos clientes a se
-              organizar no seu dia a dia com os transportes Públicos.
+              Estamos buscando realizar um site que ajuda nossos clientes a se
+              organizar no seu dia a dia com os transportes públicos.
             </p>
           </div>
           <img src="../img/transferir.png" alt="imagem do principal objetivo" />
@@ -90,18 +80,8 @@
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
       </div>
       <div class="bgtop">
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
         <br />
         <br />
         <br />
@@ -129,18 +109,8 @@
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
       </div>
       <div class="bgbottom">
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
         <br />
         <br />
         <br />
@@ -165,30 +135,22 @@
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
       </div>
       <div class="bgtop">
         <br />
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
         <div class="objetivo-row">
-            <h1>Fale conosco</h1>
-            <br />
-            <div class="principal">
+          <h1>Fale conosco</h1>
+          <br />
+          <div class="principal">
             <p>(12) 3456-7890</p>
             <p>Rua Qualquer, 123, Cidade Qualquer ola@grandesite.com.br</p>
           </div>
         </div>
+        <br />
+        <br />
         <br />
         <br />
       </div>
