--- a/public/pages/perfil.html
+++ b/public/pages/perfil.html
@@ -51,7 +51,7 @@
               rows="4"
             ></textarea>
             <p>Ajustes</p>
-            <a href="linhaOnibus"><button>Linhas de Ônibus</button></a>
+            <a href="linhaOnibus">Linhas de Ônibus</a>
             <select name="" id="">
               <a href="">Editar os dados</a>
               <a href="">Alterar a senha</a>
@@ -59,6 +59,11 @@
           </div>
         </div>
       </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </main>
     <footer>
       <div class="contatos-container">
@@ -75,7 +80,9 @@
         <div class="logos">
           <a href="#">
             <img src="../img/facebook-app-symbol.png" alt="icon facebook" /></a
-          ><a href="#"> <img src="../img/instagram.png" alt="icon instagram" /></a>
+          ><a href="#">
+            <img src="../img/instagram.png" alt="icon instagram"
+          /></a>
           <a href="#"><img src="../img/twitter.png" alt="icon twitter" /></a>
         </div>
       </div>
