--- a/public/pages/cadastro.html
+++ b/public/pages/cadastro.html
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="blocobotao">
-          <button class="button" type="submit" onclick="verificarCadastro()">
+          <button class="buttonCadastrar" type="submit" onclick="verificarCadastro()">
             Cadastrar-se
           </button>
         </div>
@@ -167,6 +167,7 @@
       <br />
     </main>
     <footer>
+
       <div class="contatos-container">
         <h2>Precisa de Suporte?</h2>
         <ul>
@@ -199,6 +200,10 @@
         </div>
       </div>
     </footer>
+    <div class="direitosAutorais">
+      <hr />
+      <p>© 2025 SenaiSurc - Todos os direitos reservados.</p>
+    </div>
   </body>
   <script src="../../app.js"></script>
   <script src="../js/script.js"></script>
