--- a/public/pages/cadastroAdm.html
+++ b/public/pages/cadastroAdm.html
@@ -51,7 +51,7 @@
       <br />
       <br />
       <br />
-      <form action="/Cadusuarios" method="POST" class="bloco">
+      <form action="/api/usuarios/register" method="POST" class="bloco">
         <div class="blocoregistro">
           <br />
           <h1>Cadastrar-se</h1>
