--- a/public/pages/esqueciSenha.html
+++ b/public/pages/esqueciSenha.html
@@ -93,6 +93,10 @@
         </div>
       </div>
     </footer>
+    <div class="direitosAutorais">
+      <hr />
+      <p>© 2025 SenaiSurc - Todos os direitos reservados.</p>
+    </div>
   </body>
   <script src="../js/script.js"></script>
 </html>
