--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -21,9 +21,8 @@
             <div class="dropdown-content">
               <a href="login">Login</a>
               <a href="cadastro">Registrar-se</a>
-              <a href="perfil" class="perfil"
-                ><img src="../img/fotodeperfil.jpg" alt="" />NickName</a
-              >
+              <a href="perfil" class="perfil">
+                <img src="../img/fotodeperfil.jpg" alt="" />NickName</a>
             </div>
           </div>
         </div>
@@ -74,10 +73,10 @@
           <br />
         </div>
         <div class="blocobotao">
-          <button class="button">
+          <button class="buttonLogar">
             <a href="cadastro">Voltar</a>
           </button>
-          <button class="button" type="submit" onclick="verificarLogin()">
+          <button class="buttonLogar" type="submit" onclick="verificarLogin()">
             Entrar
           </button>
         </div>
@@ -117,14 +116,18 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="index"><li>Inicio</li></a>
-            <a href="cadastro"><li>Registrar-se</li></a>
-            <a href="login"><li>Logar-se</li></a>
-            <a href="sobreNos"><li>Sobre Nós</li></a>
+            <li><a href="index">Inicio</li></a>
+            <li><a href="cadastro">Registrar-se</li></a>
+            <li><a href="login">Logar-se</li></a>
+            <li><a href="sobreNos">Sobre Nós</li></a>
           </ul>
         </div>
       </div>
     </footer>
+    <div class="direitosAutorais">
+      <hr />
+      <p>© 2025 SenaiSurc - Todos os direitos reservados.</p>
+    </div>
   </body>
   <script src="../js/script.js"></script>
 </html>
