--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -22,7 +22,9 @@
               <a href="login">Login</a>
               <a href="cadastro">Registrar-se</a>
               <a href="perfil" class="perfil">
-                <img src="../img/fotodeperfil.jpg" alt="" />NickName</a>
+                <img src="../img/fotodeperfil.jpg" alt="" />
+                NickName
+              </a>
             </div>
           </div>
         </div>
