--- a/public/pages/admLinhaOnibus.html
+++ b/public/pages/admLinhaOnibus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SenaiSurc</title>
     <link rel="stylesheet" href="../css/admLinhaOnibus.css"/>
+    <link rel="icon" href="../img/aquelesquemsabem.png" />
   </head>
   <body>
     <header>
@@ -126,8 +127,10 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="index"><li>Inicio</li></a>
-            <a href="sobreNos"><li>Sobre Nós</li></a>
+            <li><a href="index">Inicio</a></li>
+            <li><a href="cadastro">Registrar-se</a></li>
+            <li><a href="login">Logar-se</a></li>
+            <li><a href="sobreNos">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
