--- a/public/pages/cadastro.html
+++ b/public/pages/cadastro.html
@@ -21,6 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SenaiSurc</title>
     <link rel="stylesheet" href="../css/cadastro.css" />
+    <link rel="icon" href="../img/aquelesquemsabem.png" />
   </head>
   <body>
     <header>
@@ -156,7 +157,11 @@
           </div>
         </div>
         <div class="blocobotao">
-          <button class="buttonCadastrar" type="submit" onclick="verificarCadastro()">
+          <button
+            class="buttonCadastrar"
+            type="submit"
+            onclick="verificarCadastro()"
+          >
             Cadastrar-se
           </button>
         </div>
@@ -167,7 +172,6 @@
       <br />
     </main>
     <footer>
-
       <div class="contatos-container">
         <h2>Precisa de Suporte?</h2>
         <ul>
@@ -192,10 +196,10 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="index"><li>Inicio</li></a>
-            <a href="cadastro"><li>Registrar-se</li></a>
-            <a href="login"><li>Logar-se</li></a>
-            <a href="sobreNos"><li>Sobre Nós</li></a>
+            <li><a href="index">Inicio</a></li>
+            <li><a href="cadastro">Registrar-se</a></li>
+            <li><a href="login">Logar-se</a></li>
+            <li><a href="sobreNos">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
