--- a/public/pages/esqueciSenha.html
+++ b/public/pages/esqueciSenha.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SenaiSurc</title>
     <link rel="stylesheet" href="../css/esqueciSenha.css" />
+    <link rel="icon" href="../img/aquelesquemsabem.png" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
@@ -15,13 +16,19 @@
         /></a>
         <!-- quero deixar esses botões pro ladooooooo -->
         <div class="lado">
-          <a href="login">ENTRAR</a>
-          <a href="cadastro">CADASTRAR</a>
-          <img src="../img/menu.png" class="menu" />
-          <ul class="lista">
-            <li><a href="login">ENTRAR</a></li>
-            <li><a href="cadastro">CADASTRAR</a></li>
-          </ul>
+          <a href="login" class="button">ENTRAR</a>
+          <a href="cadastro" class="button">CADASTRAR</a>
+          <div class="dropdown">
+            <img src="../img/menu.png" class="menu" />
+            <div class="dropdown-content">
+              <a href="login">Login</a>
+              <a href="cadastro">Registrar-se</a>
+              <a href="perfil" class="perfil">
+                <img src="../img/fotodeperfil.jpg" alt="" />
+                NickName
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -45,11 +52,20 @@
         <div class="blocoregistro">
           <br />
           <h1>Esqueci minha Senha</h1>
-          <label for="">Email:</label>
-          <input type="email" id="inputEmail" />
+          <div class="form-group">
+            <label for="">Email:</label>
+            <input
+              type="email"
+              id="inputEmail"
+              placeholder="Email:"
+              onkeypress="return event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57) || (event.charCode >= 64 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122)"
+              required
+            />
+          </div>
           <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-      <br/>
-      <button class="buttonEnviar" type="submit">Receber código</button>
+        </div>
+        <div class="blocobotao">
+          <button class="buttonEnviar" type="submit">Receber código</button>
         </div>
       </form>
       <br />
@@ -77,7 +93,9 @@
         <div class="logos">
           <a href="#">
             <img src="../img/facebook-app-symbol.png" alt="icon facebook" /></a
-          ><a href="#"> <img src="../img/instagram.png" alt="icon instagram" /></a>
+          ><a href="#">
+            <img src="../img/instagram.png" alt="icon instagram"
+          /></a>
           <a href="#"><img src="../img/twitter.png" alt="icon twitter" /></a>
         </div>
       </div>
@@ -85,10 +103,10 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <a href="index"><li>Inicio</li></a>
-            <a href="cadastro"><li>Registrar-se</li></a>
-            <a href="login"><li>Logar-se</li></a>
-            <a href="sobreNos"><li>Sobre Nós</li></a>
+            <li><a href="index">Inicio</a></li>
+            <li><a href="cadastro">Registrar-se</a></li>
+            <li><a href="login">Logar-se</a></li>
+            <li><a href="sobreNos">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
