--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SenaiSurc</title>
     <link rel="stylesheet" href="../css/login.css" />
+    <link rel="icon" href="../img/aquelesquemsabem.png" />
   </head>
   <body>
     <header>
@@ -118,10 +119,10 @@
         <h2>Mapa do site</h2>
         <div class="mapa">
           <ul>
-            <li><a href="index">Inicio</li></a>
-            <li><a href="cadastro">Registrar-se</li></a>
-            <li><a href="login">Logar-se</li></a>
-            <li><a href="sobreNos">Sobre Nós</li></a>
+            <li><a href="index">Inicio</a></li>
+            <li><a href="cadastro">Registrar-se</a></li>
+            <li><a href="login">Logar-se</a></li>
+            <li><a href="sobreNos">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
