--- a/public/pages/sobreNos.html
+++ b/public/pages/sobreNos.html
@@ -32,10 +32,10 @@
     </header>
     <main>
       <div class="marca">
-        <a href="">
+        <a href="sobreNos">
           <img src="../img/aquelesquemsabem.png" alt="marca d'agua" />
+          <p>SenaiSurc</p>
         </a>
-        <p>SenaiSurc</p>
       </div>
       <br />
       <br />
